<resources>
    <string name="app_name">Messages</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Notification tone</string>
    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="ringtone_type_label">Type:</string>
    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>
    <string name="ringtone_name_label">Name:</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="play">play</string>
    <string name="stop">Stop.</string>
    <string name="search">Search</string>
    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure?  This file was not created using Ringdroid!</string>
    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="delete_failed">Unable to delete file</string>
    <string name="artist_name">Ringdroid artist</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="time_seconds">seconds</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>
    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>
    <string name="record_description">Touch and hold to record</string>
    <string name="edit">Edit</string>
    <string name="contact">Contact</string>
    <string name="phrase">Phrase</string>
    <string name="schedule">Schedule</string>
    <string name="audio">Audio</string>
    <string name="calendar">Calendar</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">QKSMS+</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="imagepicker_multiselect_done">Done</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_save">Save to gallery</string>
    <string name="menu_share">Share</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_draft">Draft</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make QKSMS your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">QKSMS needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">QKSMS needs permission to view your contacts</string>
    <string name="main_permission_allow">Allow</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus" translatable="false">QKSMS+</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title" translatable="false">QKSMS+</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying QKSMS?</string>
    <string name="rate_summary">Share some love and rate us on Google Play!</string>
    <string name="rate_okay">OK</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled for</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock QKSMS+ to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_sim_changed_toast">SIM %1$d (%2$s) selected</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="message_status_sending">Sending…</string>
    <string name="message_status_delivered">Delivered %s</string>
    <string name="message_status_failed">Failed to send. Tap to try again</string>
    <string name="info_title">Details</string>
    <string name="info_copied_address">Address copied</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_theme">Theme</string>
    <string name="info_archive">Archive</string>
    <string name="info_unarchive">Unarchive</string>
</resources>